# Notebook

./: .gitignore
交换机/: 复习文档.md  第三章习题.md  第六章习题.md
工程管理/: 第一、二章.md  飞机.md
摘抄/: 古诗.md
电磁场传输理论/: ch1_矢量分析与场论.md  ch5_电磁波的辐射.md  ch6_均匀电磁波的传播.md  ch7_均匀波导中的电磁波.md  总复习文档.md  电磁场及其边值条件的解法.md
科研/: DeepConf.md  Exploring_Diverse_In-Context_Configurations_for_mage_Captioning.md  QwenVL2.5_tech_repo.md  Test_Time_Reinforce_Learning.md  VAE.md  audio-VAE.md
科研/ToolFormer/: note.md
科研/dl-learning/gamma/: modeling_gemma.py  processing_paligemma.py  pyproject.toml  pyrightconfig.json  siglip_model.py
算法/: .gitignore  01_double_divide_search.cpp  01_double_divide_search.py  02_remove_elements.cpp  02_remove_elements.py  03_serial_number.cpp  03_serial_number.py  04_min_sub_array  04_min_sub_array.cpp  05_spiral_array  05_spiral_array.cpp  06_span_sum  06_span_sum.cpp  07_design_linklist  07_design_linklist.cpp  08_reverse_nodelist.cpp  09_double_reverse_nodelist.cpp  10_delete_last_N_node.cpp  11_getIntersectionNode.cpp  12_reverseWords.cpp  14_strStr.cpp  15_repeatedStrPattern.cpp  16_myQueue.cpp  17_myStack.cpp  18_isValid.cpp  19_removeDuplicates.cpp  CMakeLists.txt
算法/.qwen/: settings.json  settings.json.orig
通信原理/: ch10_模拟信号数字化.md  ch1_绪论.md  ch2_随机过程.md  ch3_随机过程.md  ch4_信道.md  ch4_模拟调制系统.md  ch5_数字基带传输系统.md  ch6_数字频带传输系统.md  ch8_数字带同调制技术.md  ch9_数字信号最佳接收.md  知识点  第六章总结.md
通信电子线路/: ch3_高频功率放大器.md  ch4_正弦波震荡器.md  ch5_振幅调制与解调.md  ch6_角度调制.md  ch7_变频器.md  ch8_锁相环.md  ch_2_小信号调谐放大器.md  总复习.md  期中测验.md
通信电子线路实验/: 4.集成锁相环.md  实验2预习报告.md  实验3预习报告.md  实验4预习报告.md
(+18 files in other folders)
