cmake_minimum_required(VERSION 4.0)
project(alg)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")

set(CMAKE_CXX_STANDARD 14)

add_executable(alg_1
        01_double_divide_search.cpp)
add_executable(alg_2
        02_remove_elements.cpp)
add_executable(alg_3
        03_serial_number.cpp)
add_executable(alg_4
        04_min_sub_array.cpp)
add_executable(alg_5
        05_spiral_array.cpp)
add_executable(alg_6
        06_span_sum.cpp)
add_executable(alg_7
        07_design_linklist.cpp)