[project]
name = "gamma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "torch>=2.0.0",
]

[tool.pyright]
typeCheckingMode = "basic"
reportGeneralTypeIssues = false
reportAssignmentType = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }